{
    "name": "InputActionsSpawn",
    "maps": [
        {
            "name": "Player",
            "id": "908bef1a-452f-42e9-9e05-153b1a39ee5b",
            "actions": [
                {
                    "name": "Spawn",
                    "type": "Button",
                    "id": "a7637424-d8cb-42b9-8e39-637264052144",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Drop",
                    "type": "Button",
                    "id": "192990b0-a708-485c-b619-7d65c3a3f142",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StartGame",
                    "type": "Button",
                    "id": "0ef3e53a-cbf6-43a3-8d32-5bf1bba0c9fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EndGame",
                    "type": "Button",
                    "id": "1a623274-7e03-4699-bb86-60699377c1cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GoStartScreen",
                    "type": "Button",
                    "id": "8fc235d8-36b0-4e8e-a164-6614101b2214",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StartStory",
                    "type": "Button",
                    "id": "3eb0dd4f-a604-48bc-8c37-fcc5472c1d0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "ff1245c1-6c72-4909-8f95-82006ba2c997",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Redo",
                    "type": "Button",
                    "id": "1caf52c6-6ca4-48ff-a97e-7757ccd02de0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Settings",
                    "type": "Button",
                    "id": "6684ecf2-bcda-4279-9adf-1412845476fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GoControlsScreen",
                    "type": "Button",
                    "id": "b0c54daa-e778-41bb-b3b3-c8c8b83984d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1d6b5bff-38db-4009-b79c-d633d8ac6a29",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Spawn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71106a3f-c2e4-4611-9fb2-53eb6d43a1cf",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df9832e6-db2f-47b9-ab13-467031fed398",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ba8304d-a5bd-4003-b3ae-5aa4cc7ed608",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EndGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e63340d6-a5c2-43ff-8531-74d64c791936",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoStartScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3227ee54-e59d-46d0-85f9-85488d7c12d9",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartStory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25c93563-f20f-4186-b33b-d1c4622ad187",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d98da1b-5258-49d9-9b7f-dd917eb8cc6b",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Redo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01440527-946d-4dce-83c4-7ef45a943510",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Settings",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59229e91-dd08-41b9-be94-3ad903200de6",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoControlsScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}